--- a/Temperature_append_csvs.ipynb
+++ b/Temperature_append_csvs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +162,7 @@
        "4  USW00094789  40.63915  -73.76401        3.4  1/5/2000   8.3  -2.2   NaN"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +213,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = result\n",
+    "df['DATE'] = pd.to_datetime(df['DATE'])\n",
+    "df[\"YEAR\"] = df[\"DATE\"].dt.year\n",
+    "df = df.drop(columns=[\"TOBS\"])\n",
+    "df[\"TEMP_AVG\"] = df[[\"TMAX\",\"TMIN\"]].mean(axis=1)\n",
+    "sum_df = df.groupby([\"STATION\",\"YEAR\",\"LATITUDE\",\"LONGITUDE\"])[\"TEMP_AVG\"].mean()\n",
+    "sum_df=sum_df.reset_index(drop=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('database or disk is full')).History will not be written to the database.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -256,267 +264,74 @@
        "      <th>0</th>\n",
        "      <td>USC00020404</td>\n",
        "      <td>2003</td>\n",
-       "      <td>32.73060</td>\n",
-       "      <td>-111.69170</td>\n",
+       "      <td>32.7306</td>\n",
+       "      <td>-111.6917</td>\n",
        "      <td>24.045059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>USC00020404</td>\n",
        "      <td>2006</td>\n",
-       "      <td>32.73060</td>\n",
-       "      <td>-111.69170</td>\n",
+       "      <td>32.7306</td>\n",
+       "      <td>-111.6917</td>\n",
        "      <td>21.639315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>USC00020404</td>\n",
        "      <td>2009</td>\n",
-       "      <td>32.73060</td>\n",
-       "      <td>-111.69170</td>\n",
+       "      <td>32.7306</td>\n",
+       "      <td>-111.6917</td>\n",
        "      <td>22.109066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>USC00020404</td>\n",
        "      <td>2012</td>\n",
-       "      <td>32.73060</td>\n",
-       "      <td>-111.69170</td>\n",
+       "      <td>32.7306</td>\n",
+       "      <td>-111.6917</td>\n",
        "      <td>20.966433</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>USC00020404</td>\n",
        "      <td>2015</td>\n",
-       "      <td>32.73060</td>\n",
-       "      <td>-111.69170</td>\n",
+       "      <td>32.7306</td>\n",
+       "      <td>-111.6917</td>\n",
        "      <td>21.131983</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>USW00094789</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>40.63915</td>\n",
-       "      <td>-73.76401</td>\n",
-       "      <td>13.238356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>USW00094789</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>40.63915</td>\n",
-       "      <td>-73.76401</td>\n",
-       "      <td>12.184658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>USW00094789</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>40.63915</td>\n",
-       "      <td>-73.76401</td>\n",
-       "      <td>13.906011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>USW00094789</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>40.63915</td>\n",
-       "      <td>-73.76401</td>\n",
-       "      <td>13.433014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>USW00094789</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>40.63915</td>\n",
-       "      <td>-73.76401</td>\n",
-       "      <td>12.635068</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>61 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        STATION  YEAR  LATITUDE  LONGITUDE   TEMP_AVG\n",
-       "0   USC00020404  2003  32.73060 -111.69170  24.045059\n",
-       "1   USC00020404  2006  32.73060 -111.69170  21.639315\n",
-       "2   USC00020404  2009  32.73060 -111.69170  22.109066\n",
-       "3   USC00020404  2012  32.73060 -111.69170  20.966433\n",
-       "4   USC00020404  2015  32.73060 -111.69170  21.131983\n",
-       "..          ...   ...       ...        ...        ...\n",
-       "56  USW00094789  2006  40.63915  -73.76401  13.238356\n",
-       "57  USW00094789  2009  40.63915  -73.76401  12.184658\n",
-       "58  USW00094789  2012  40.63915  -73.76401  13.906011\n",
-       "59  USW00094789  2015  40.63915  -73.76401  13.433014\n",
-       "60  USW00094789  2018  40.63915  -73.76401  12.635068\n",
-       "\n",
-       "[61 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = result\n",
-    "df['DATE'] = pd.to_datetime(df['DATE'])\n",
-    "df[\"YEAR\"] = df[\"DATE\"].dt.year\n",
-    "df = df.drop(columns=[\"TOBS\"])\n",
-    "df[\"TEMP_AVG\"] = df[[\"TMAX\",\"TMIN\"]].mean(axis=1)\n",
-    "sum_df = df.groupby([\"STATION\",\"YEAR\",\"LATITUDE\",\"LONGITUDE\"])[\"TEMP_AVG\"].mean()\n",
-    "sum_df.reset_index(drop=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATION</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>ELEVATION</th>\n",
-       "      <th>DATE</th>\n",
-       "      <th>TMAX</th>\n",
-       "      <th>TMIN</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>TEMP_AVG</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3116</th>\n",
-       "      <td>USW00003927</td>\n",
-       "      <td>32.8978</td>\n",
-       "      <td>-97.0189</td>\n",
-       "      <td>170.7</td>\n",
-       "      <td>2018-12-27</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>10.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3117</th>\n",
-       "      <td>USW00003927</td>\n",
-       "      <td>32.8978</td>\n",
-       "      <td>-97.0189</td>\n",
-       "      <td>170.7</td>\n",
-       "      <td>2018-12-28</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>4.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3118</th>\n",
-       "      <td>USW00003927</td>\n",
-       "      <td>32.8978</td>\n",
-       "      <td>-97.0189</td>\n",
-       "      <td>170.7</td>\n",
-       "      <td>2018-12-29</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3119</th>\n",
-       "      <td>USW00003927</td>\n",
-       "      <td>32.8978</td>\n",
-       "      <td>-97.0189</td>\n",
-       "      <td>170.7</td>\n",
-       "      <td>2018-12-30</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>3.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3120</th>\n",
-       "      <td>USW00003927</td>\n",
-       "      <td>32.8978</td>\n",
-       "      <td>-97.0189</td>\n",
-       "      <td>170.7</td>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>9.70</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          STATION  LATITUDE  LONGITUDE  ELEVATION       DATE  TMAX  TMIN  \\\n",
-       "3116  USW00003927   32.8978   -97.0189      170.7 2018-12-27  16.7   4.4   \n",
-       "3117  USW00003927   32.8978   -97.0189      170.7 2018-12-28   7.8   0.6   \n",
-       "3118  USW00003927   32.8978   -97.0189      170.7 2018-12-29   4.4   1.7   \n",
-       "3119  USW00003927   32.8978   -97.0189      170.7 2018-12-30   5.0   1.7   \n",
-       "3120  USW00003927   32.8978   -97.0189      170.7 2018-12-31  16.1   3.3   \n",
-       "\n",
-       "      YEAR  TEMP_AVG  \n",
-       "3116  2018     10.55  \n",
-       "3117  2018      4.20  \n",
-       "3118  2018      3.05  \n",
-       "3119  2018      3.35  \n",
-       "3120  2018      9.70  "
+       "       STATION  YEAR  LATITUDE  LONGITUDE   TEMP_AVG\n",
+       "0  USC00020404  2003   32.7306  -111.6917  24.045059\n",
+       "1  USC00020404  2006   32.7306  -111.6917  21.639315\n",
+       "2  USC00020404  2009   32.7306  -111.6917  22.109066\n",
+       "3  USC00020404  2012   32.7306  -111.6917  20.966433\n",
+       "4  USC00020404  2015   32.7306  -111.6917  21.131983"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#df.head(1000)\n",
-    "df.tail()"
+    "sum_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#convert to CSV\n",
     "#https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_csv.html\n",
-    "compression_opts = dict(method='zip',\n",
-    "                        archive_name='out.csv')  \n",
-    "df.to_csv('out.zip', index=False,\n",
-    "          compression=compression_opts)  "
+    "sum_df.to_csv(\"Temperature_File/sum_df.csv\",index=False)\n"
    ]
   },
   {
